--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -164,7 +164,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
