--- a/Areas/Admin/Views/Products/Delete.cshtml
+++ b/Areas/Admin/Views/Products/Delete.cshtml
@@ -205,3 +205,7 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
