--- a/Areas/Admin/Views/Products/Details.cshtml
+++ b/Areas/Admin/Views/Products/Details.cshtml
@@ -202,3 +202,7 @@
     <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
