--- a/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Areas/Admin/Views/Products/Edit.cshtml
@@ -182,3 +182,7 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
