--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -213,3 +213,7 @@
 }
     </tbody>
 </table>
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
