Add 5 pages and update some files

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tablet"><i class="bi bi-tablet-landscape-fill" id="tablet"></i> TABLET</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Tablet" id="tablet"><i class="bi bi-tablet-landscape-fill" id="tablet"></i> TABLET</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -124,7 +124,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/watch"><i class="bi bi-smartwatch" id="watch"></i> ĐỒNG HỒ</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Watch" id="watch"><i class="bi bi-smartwatch" id="watch"></i> ĐỒNG HỒ</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -155,7 +155,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sound"><i class="bi bi-earbuds" id="sound"></i> ÂM THANH</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Sound" id="sound"><i class="bi bi-earbuds" id="sound"></i> ÂM THANH</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -221,7 +221,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/accessories"><i class="bi bi-sd-card-fill" id="accessories"></i> PHỤ KIỆN</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Accessories" id="accessories"><i class="bi bi-sd-card-fill" id="accessories"></i> PHỤ KIỆN</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
