--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -4,216 +4,166 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<head>
+    <!-- Datatable -->
+    <link href="~/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
+    <!-- Custom Stylesheet -->
+    <link href="~/css/style.css" rel="stylesheet">
+</head>
+<body>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.View)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Picture)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RawPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VendorProductId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductDetail)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MSRP)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AvailableVersion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Version)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AvailableColor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Color)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitInStock)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductAvailable)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitInOrder)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReorderLevel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CurrentOrder)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Note)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Inventory)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Connection)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Screen)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Structure)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sound)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Graphic)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Battery)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ram)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OS)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Camera)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Processor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rom)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.View)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Picture)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RawPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VendorProductId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductDetail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MSRP)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AvailableVersion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Version)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AvailableColor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitInStock)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductAvailable)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitInOrder)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReorderLevel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CurrentOrder)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Note)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.CategoryId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Inventory.InventoryId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Connection.ConnId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Screen.ScreenId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Structure.StructId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sound.SoundId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Graphic.GraphicId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Battery.BatteryId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ram.RamId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OS.OsId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Camera.CamId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Processor.CpuId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rom.RomId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <div class="container-fluid">
+        <div class="row page-titles mx-0">
+            <div class="col-sm-6 p-md-0">
+                <div class="welcome-text">
+                    <h4>Hi, welcome back!</h4>
+
+                    <span class="ml-1">
+                        <a asp-action="Create">Thêm sản phẩm</a>
+                    </span>
+                </div>
+            </div>
+            <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý sản phẩm</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Sản phẩm</a></li>
+                </ol>
+            </div>
+        </div>
+
+        <!-- row -->
+
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title"> Products</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table id="example" class="display" style="min-width: 845px">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.ProductName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.UnitPrice)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.RawPrice)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MSRP)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Version)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Color)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Category)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Inventory)
+                                        </th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model) {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.ProductName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.UnitPrice)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.RawPrice)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MSRP)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Version)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Color)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Inventory.InventoryId)
+                                            </td>
+                                            <td>
+                                                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
+                                                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.ProductName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.UnitPrice)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.RawPrice)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MSRP)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Version)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Color)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Category)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Inventory)
+                                        </th>
+                                        <th></th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
     <script src="~/js/quixnav-init.js"></script>
     <script src="~/js/custom.min.js"></script>
+
+    <!-- Datatable -->
+    <script src="~/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/plugins-init/datatables.init.js"></script>
+</body>
