set route product for viewer

--- a/Areas/Admin/Views/Products/Delete.cshtml
+++ b/Areas/Admin/Views/Products/Delete.cshtml
@@ -24,196 +24,196 @@
                 </ol>
             </div>
         </div>
-    <dl class="row">
-           <dt class="col-sm-2">
+        <dl class="row">
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.ProductName)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.UnitPrice)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.UnitPrice)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.View)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.View)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Picture)
-        </dt>
-             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Picture)
-        </dd>
-           <dt class="col-sm-2">
+            </dt>
+            <dd class="col-sm-10">
+                <img src="@Html.DisplayFor(model => model.Picture)" />
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.RawPrice)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.RawPrice)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.VendorProductId)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.VendorProductId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ProductDetail)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.ProductDetail)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.MSRP)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.MSRP)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.AvailableVersion)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.AvailableVersion)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Version)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Version)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.AvailableColor)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.AvailableColor)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Color)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Color)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.UnitInStock)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.UnitInStock)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ProductAvailable)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.ProductAvailable)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.UnitInOrder)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.UnitInOrder)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ReorderLevel)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.ReorderLevel)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.CurrentOrder)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CurrentOrder)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Note)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Note)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Category)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Category.CategoryId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Inventory)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Inventory.InventoryId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Connection)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Connection.ConnId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Screen)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Screen.ScreenId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Structure)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Structure.StructId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Sound)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Sound.SoundId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Graphic)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Graphic.GraphicId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Battery)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Battery.BatteryId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Ram)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Ram.RamId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.OS)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.OS.OsId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Camera)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Camera.CamId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Processor)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Processor.CpuId)
-        </dd>
-           <dt class="col-sm-2">
+            </dd>
+            <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Rom)
-        </dt>
-             <dd class="col-sm-10">
+            </dt>
+            <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Rom.RomId)
-        </dd>
-    </dl>
+            </dd>
+        </dl>
 
- </div>
+    </div>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProductId" />
