--- a/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Areas/Admin/Views/Customers/Index.cshtml
@@ -43,9 +43,12 @@
                         <div class="table-responsive">
                             <table id="example" class="display" style="min-width: 845px">
                                 <thead>
-                                    <tr>
+                                    <tr>      
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CreditCardTypeID)
+                                            @Html.DisplayNameFor(model => model.AppUser)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.AppUser.PhoneNumber)
                                         </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.ShipAddress)
@@ -53,9 +56,7 @@
                                         <th>
                                             @Html.DisplayNameFor(model => model.DateEntered)
                                         </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.AppUser)
-                                        </th>
+                                      
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -63,7 +64,10 @@
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CreditCardTypeID)
+                                                @Html.DisplayFor(modelItem => item.AppUser.FullName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.AppUser.PhoneNumber)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.ShipAddress)
@@ -71,9 +75,7 @@
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.DateEntered)
                                             </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.AppUser.Id)
-                                            </td>
+                                         
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.CustomerID">Edit</a> |
                                                 <a asp-action="Details" asp-route-id="@item.CustomerID">Details</a> |
