--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         <div class="container navbar sub-nav-item">
             <ul class="nav justify-content-center" style="margin: auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Phone" id="phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Phone" id="phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -77,7 +77,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Laptop" id="laptop"><i class="bi bi-laptop-fill" id="laptop"></i> LAPTOP</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Laptop" id="laptop"><i class="bi bi-laptop-fill" id="laptop"></i> LAPTOP</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -102,7 +102,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Tablet" id="tablet"><i class="bi bi-tablet-landscape-fill" id="tablet"></i> TABLET</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Tablet" id="tablet"><i class="bi bi-tablet-landscape-fill" id="tablet"></i> TABLET</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -124,7 +124,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Watch" id="watch"><i class="bi bi-smartwatch" id="watch"></i> ĐỒNG HỒ</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Watch" id="watch"><i class="bi bi-smartwatch" id="watch"></i> ĐỒNG HỒ</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -155,7 +155,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Sound" id="sound"><i class="bi bi-earbuds" id="sound"></i> ÂM THANH</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Sound" id="sound"><i class="bi bi-earbuds" id="sound"></i> ÂM THANH</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
@@ -221,7 +221,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Accessories" id="accessories"><i class="bi bi-sd-card-fill" id="accessories"></i> PHỤ KIỆN</a>
+                    <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Accessories" id="accessories"><i class="bi bi-sd-card-fill" id="accessories"></i> PHỤ KIỆN</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
