step to step bill

--- a/Areas/Admin/Pages/Manage/DashBoard1.cshtml
+++ b/Areas/Admin/Pages/Manage/DashBoard1.cshtml
@@ -265,10 +265,10 @@
             <div class="col-lg-6">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title">Country</h4>
+                        <h4 class="card-title">World Map</h4>
                     </div>
                     <div class="card-body">
-                        <div id="vmap13" class="vmap"></div>
+                        <div id="world-map" class="vmap"></div>
                     </div>
                 </div>
             </div>
@@ -638,7 +638,10 @@
     <!-- Counter Up -->
     <script src="~/vendor/jqvmap/js/jquery.vmap.min.js"></script>
     <script src="~/vendor/jqvmap/js/jquery.vmap.usa.js"></script>
+      <script src="~/vendor/jqvmap/js/jquery.vmap.world.js"></script>
     <script src="~/vendor/jquery.counterup/jquery.counterup.min.js"></script>
 
     <script src="~/js/dashboard/dashboard.js" type="text/javascript"></script>
+        <!-- All init script -->
+    <script src="~/js/plugins-init/jqvmap-init.js"></script>
 </body>
