--- a/Views/OrderDetails/Index.cshtml
+++ b/Views/OrderDetails/Index.cshtml
@@ -68,7 +68,7 @@
             </tr>
         
             if( vis == true) {
-                @Html.ActionLink("Thanh toán","Index","Orders",new {productid = item.OrderId},null)
+                @Html.ActionLink("Thanh toán","Index","Orders",new {id = item.OrderId},null)
                 ;
                 vis = false;
 
