--- a/Views/Orders/Create.cshtml
+++ b/Views/Orders/Create.cshtml
@@ -1,10 +1,17 @@
 ﻿@model WEB2.Models.Order
 
 @{
-    ViewData["Title"] = "Create";
+    Layout = null;
 }
 
-<h2>Create</h2>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Create</title>
+</head>
+<body>
 
 <h4>Order</h4>
 <hr />
@@ -102,3 +109,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</body>
+</html>
