--- a/Views/Orders/Delete.cshtml
+++ b/Views/Orders/Delete.cshtml
@@ -1,10 +1,17 @@
 ﻿@model WEB2.Models.Order
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null;
 }
 
-<h2>Delete</h2>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Delete</title>
+</head>
+<body>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -109,3 +116,5 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+</body>
+</html>
