--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -1,10 +1,17 @@
 ﻿@model WEB2.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    Layout = null;
 }
 
-<h2>Details</h2>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Details</title>
+</head>
+<body>
 
 <div>
     <h4>Order</h4>
@@ -106,3 +113,5 @@
     <a asp-action="Edit" asp-route-id="@Model.OrderId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+</body>
+</html>
