Make some changes on Phone.cshtml

--- a/Views/Products/Phone.cshtml
+++ b/Views/Products/Phone.cshtml
@@ -38,9 +38,9 @@
                     <div class="card" id="apple">
                         @*nhớ add id này để lọc *@
                         <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
-                        <img class="card-img-top" src="@item.Picture" alt="Iphone 13 Pro Max">
+                        <img class="card-img-top" src="@item.Picture" alt="@item.Color">
                         <div class="card-body">
-                            <h5 class="card-title">@item.ProductName</h5>
+                            <h5 class="card-title">@item.ProductName (@item.Color)</h5>
                             <h5 class="card-title pricesale m-0">@item.UnitPrice</h5>
                             <h6 class="card-title price text-muted mt-1">@item.MSRP</h6>
                             <div>
