--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,13 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div>
+    <ul>    Chính sách mua hàng
+        <li>
+            Mua rồi thì không trả
+        </li>
+        <li>
+            Đổi hàng mới trong vòng 1 tháng
+        </li>
+    </ul>
+</div>
