--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -7,10 +7,10 @@
     }
 }
 
-<h2>Manage your account</h2>
+<h2>Quản lý tài khoản</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Thay đổi thông tin tài khoản</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
