--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -128,7 +128,7 @@
                                                             <tbody>
                                                                 @{
                                                                     double moneyItem = 0;
-                                                                    double shipMoney = 0;
+                                                                   // double shipMoney = 0;
                                                                     double pay = 0;
 
                                                                 }
